--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "helmet": "^7.1.0",
     "joi": "^17.12.1",
     "mongodb-sanitize": "^2.2.0",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "slugify": "^1.6.6"
   }
 }
