--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "APIs for the songs project given by AddisSoftware",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "prod": "node index.js"
   },
   "author": "Negasi Kiflom",
   "license": "ISC",
